--- a/Details.html
+++ b/Details.html
@@ -30,7 +30,7 @@
 <body>
 
   <details>
-    <summary>&#9976</summary>
+    <summary>&#9976;</summary>
       <nav>
         <li><a href="">Home</a></li>
         <li><a href="">About</a></li>
