--- a/Log In.html
+++ b/Log In.html
@@ -10,6 +10,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    width:100%;
+    height:100vh;
     
 }
 .login {
