--- a/Double Click Heart.html
+++ b/Double Click Heart.html
@@ -46,7 +46,7 @@
     
     <div class="container">
         <h1>click Double </h1>
-        <i class="fa-solid fa-heart heart">Double Click</i>
+        <i class="fa-solid fa-heart heart">I Love You</i>
     </div>
 
     <script>
