Update Creats Smooth Animation.html

--- a/Cerats Smooth Aimation.html
+++ b/Cerats Smooth Aimation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cerats Smooth Aimation</title>
+    <title>Creats Smooth Animation</title>
 </head>
 <style>
     html {
@@ -47,4 +47,5 @@
     <section class="section" id="Section-4">Section 4</section>
     <section class="section" id="Section-5">Section 5</section>
 </body>
+
 </html>
